Small button fix
Fixed cut off shoe button on new info page

--- a/src/components/screens/newinfo.css
+++ b/src/components/screens/newinfo.css
@@ -56,7 +56,7 @@ body{
     font-style:normal;
     font-size: 100%;
     height:250px;
-    width:300px;
+    width:250px;
     text-align:right;
 }
 
