--- a/src/components/styles/NewInfo.css
+++ b/src/components/styles/NewInfo.css
@@ -54,8 +54,8 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-style: normal;
     font-size: 100%;
-    height: 12vh;
-    width: 20vh;
+    height: 250px;
+    width: 250px;
     text-align: right;
 }
 
